WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

// Initialization
BOOL    LCAPI lcInitialize    ();
BOOL    LCAPI lcUninitialize  (BOOL bSaveConfig);
HANDLE  LCAPI lcAddFontRes    (HANDLE hModule, int idResource, LPCWSTR szFontName);
HANDLE  LCAPI lcAddFontFile   (LPCWSTR szFilename, LPCWSTR szFontName);
HANDLE  LCAPI lcAddFontBin    (HANDLE hData, LPCWSTR szFontName);
// GUI strings
BOOL    LCAPI lcStrAdd        (LPCWSTR szTag, LPCWSTR szText);
 
BOOL    LCAPI lcStrSet        (LPCWSTR szTag, LPCWSTR szText);
LPCWSTR LCAPI lcStrGet        (LPCWSTR szTag);
                   
BOOL    LCAPI lcStrFileLoad   (LPCWSTR szFileName);
BOOL    LCAPI lcStrFileSave   (LPCWSTR szFileName, LPCWSTR szLanguage, BOOL bInit);
// Objects properties
BOOL    LCAPI lcPropGetBool   (HANDLE hObject, int idProp);
int     LCAPI lcPropGetInt    (HANDLE hObject, int idProp);
double  LCAPI lcPropGetFloat  (HANDLE hObject, int idProp);
LPCWSTR LCAPI lcPropGetStr    (HANDLE hObject, int idProp);
int     LCAPI lcPropGetStrA   (HANDLE hObject, int idProp, char* szBuf, int BufSize);
HANDLE  LCAPI lcPropGetHandle (HANDLE hObject, int idProp);
BOOL    LCAPI lcPropPutBool   (HANDLE hObject, int idProp, BOOL bValue);
BOOL    LCAPI lcPropPutInt    (HANDLE hObject, int idProp, int Value);
BOOL    LCAPI lcPropPutFloat  (HANDLE hObject, int idProp, double Value);
BOOL    LCAPI lcPropPutStr    (HANDLE hObject, int idProp, LPCWSTR szValue);
BOOL    LCAPI lcPropPutHandle (HANDLE hObject, int idProp, HANDLE hValue);
// Drawing 
HANDLE LCAPI lcCreateDrawing      ();
BOOL   LCAPI lcDeleteDrawing      (HANDLE hDrw);
BOOL   LCAPI lcDrwNew             (HANDLE hDrw, LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcDrwNewT            (HANDLE hDrw, LPCWSTR szFileName, LPCWSTR szTemplate, HANDLE hLcWnd);
BOOL   LCAPI lcDrwLoad            (HANDLE hDrw, LPCWSTR szFileName, HWND hWnd, HANDLE hLcWnd);
BOOL   LCAPI lcDrwLoadMem         (HANDLE hDrw, HANDLE hMem, HANDLE hLcWnd);
BOOL   LCAPI lcDrwInsert          (HANDLE hDrw, LPCWSTR szFileName, int Overwrite, HWND hWnd);
BOOL   LCAPI lcDrwSave            (HANDLE hDrw, LPCWSTR szFileName, BOOL bBak, HWND hWnd);
 
int    LCAPI lcDrwSaveMem         (HANDLE hDrw, HANDLE hMem, int MemSize);
 
BOOL   LCAPI lcDrwSaveExploded    (HANDLE hDrw, LPCWSTR szFileName, BOOL bBak, HWND hWnd);
 
BOOL   LCAPI lcDrwPurge           (HANDLE hDrw);
 
BOOL   LCAPI lcDrwRegenViews      (HANDLE hDrw, HANDLE hEnt);
BOOL   LCAPI lcDrwSortObjects     (HANDLE hDrw, int ObjType);
BOOL   LCAPI lcDrwClearXData      (HANDLE hDrw, int ObjType, int Mode);
BOOL   LCAPI lcDrwResolveBlocks   (HANDLE hDrw, WCHAR* szError);  // undoc
HANDLE LCAPI lcDrwAddLayer        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szColor, HANDLE hLtype, int Lweight);
HANDLE LCAPI lcDrwAddLinetype     (HANDLE hDrw, LPCWSTR szName, LPCWSTR szDefinition);
HANDLE LCAPI lcDrwAddLinetypeF    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, LPCWSTR szLtypeName);
HANDLE LCAPI lcDrwAddTextStyle    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFontName);
HANDLE LCAPI lcDrwAddDimStyle     (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddMlineStyle   (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddImage        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName);
HANDLE LCAPI lcDrwAddImage2       (HANDLE hDrw, LPCWSTR szName, int Width, int Height, int nBits);
HANDLE LCAPI lcDrwAddBlock        (HANDLE hDrw, LPCWSTR szName, double X, double Y);
HANDLE LCAPI lcDrwAddBlockFromFile (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
 
HANDLE LCAPI lcDrwAddBlockFromDrw (HANDLE hDrw, LPCWSTR szName, HANDLE hDrw2, int Overwrite, HWND hwParent);
HANDLE LCAPI lcDrwAddBlockFile    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
HANDLE LCAPI lcDrwAddViewPaper    (HANDLE hDrw, LPCWSTR szName, int PaperSize, int Orient, double Width, double Height);
BOOL   LCAPI lcDrwDeleteObject    (HANDLE hDrw, HANDLE hObject);
HANDLE LCAPI lcDrwGetFirstObject  (HANDLE hDrw, int ObjType);
HANDLE LCAPI lcDrwGetNextObject   (HANDLE hDrw, HANDLE hObject);
HANDLE LCAPI lcDrwGetObjectByID   (HANDLE hDrw, int ObjType, int Id);
HANDLE LCAPI lcDrwGetObjectByIDH  (HANDLE hDrw, int ObjType, LPCWSTR szId);
HANDLE LCAPI lcDrwGetObjectByName (HANDLE hDrw, int ObjType, LPCWSTR szName);
int    LCAPI lcDrwCountObjects    (HANDLE hDrw, int ObjType);
HANDLE LCAPI lcDrwGetViewByBlock  (HANDLE hDrw, HANDLE hBlock);
HANDLE LCAPI lcDrwGetEntByID      (HANDLE hDrw, int Id);
HANDLE LCAPI lcDrwGetEntByIDH     (HANDLE hDrw, LPCWSTR szId);
HANDLE LCAPI lcDrwGetEntByKey     (HANDLE hDrw, int Key);
// View
BOOL   LCAPI lcViewSetRect        (HANDLE hView, double Xcen, double Ycen, double Width, double Height);
BOOL   LCAPI lcViewSetRect2       (HANDLE hView, double Lef, double Bot, double Rig, double Top);
BOOL   LCAPI lcViewSetLimits      (HANDLE hView, double Xmin, double Ymin, double Xmax, double Ymax);  // undoc
BOOL   LCAPI lcViewSetGrid        (HANDLE hView, double X0, double Y0, double dX, double dY);
BOOL   LCAPI lcViewRegen          (HANDLE hView, HANDLE hEnt);
BOOL   LCAPI lcViewSetPaperSize   (HANDLE hView, int PaperSize, int Orient, double Width, double Height);
HANDLE LCAPI lcViewGetEntByPoint  (HANDLE hView, double X, double Y, double Delta, int Mode);
int    LCAPI lcViewGetEntsByRect  (HANDLE hView, double Lef, double Bot, double Rig, double Top, BOOL bCross, int MaxNum);
HANDLE LCAPI lcViewGetEntity      (int iEnt);
BOOL   LCAPI lcViewRasterize      (HANDLE hView, LPCWSTR szFileName, double Lef, double Bot, double Rig, double Top, double Scal);
int    LCAPI lcViewRasterizeMem   (HANDLE hView, HANDLE hMem, double Lef, double Bot, double Rig, double Top, double Scal);
BOOL   LCAPI lcViewDrawMarker     (HANDLE hView, double X, double Y);   // !!! undoc
BOOL   LCAPI lcViewDrawLine       (HANDLE hView, double X0, double Y0, double X1, double Y1);  // !!! undoc
BOOL   LCAPI lcViewDrawXline      (HANDLE hView, double X0, double Y0, double X1, double Y1, BOOL bRay);  // !!! undoc
BOOL   LCAPI lcViewDrawRect       (HANDLE hView, double X0, double Y0, double X1, double Y1);  // !!! undoc
BOOL   LCAPI lcViewPrint          (HANDLE hView, HDC hPrintDC, double Lef, double Bot, double Rig, double Top, double Scal, double PapLef, double PapTop);
// Mline style
BOOL   LCAPI lcMLStyleAddLine   (HANDLE hStyle, double Offset, LPCWSTR szColor, HANDLE hLtype);
BOOL   LCAPI lcMLStyleDelLine   (HANDLE hStyle, int iLine);
BOOL   LCAPI lcMLStyleSortLines (HANDLE hStyle);
// Image 
BOOL   LCAPI lcImageSetPixelRGB (HANDLE hImage, int X, int Y, int Red, int Green, int Blue);
      
BOOL   LCAPI lcImageSetPixelI   (HANDLE hImage, int X, int Y, int iColor);
                        
BOOL   LCAPI lcImageGetPixelRGB (HANDLE hImage, int X, int Y, int* pRed, int* pGreen, int* pBlue);
BOOL   LCAPI lcImageGetPixelI   (HANDLE hImage, int X, int Y, int* piColor);
                      
BOOL   LCAPI lcImageSetPalColor (HANDLE hImage, int iColor, int Red, int Green, int Blue);
        
BOOL   LCAPI lcImageGetPalColor (HANDLE hImage, int iColor, int* pRed, int* pGreen, int* pBlue);