WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.bas


Public Declare Function lcInitialize Lib "Litecad.dll" () As Long
Public Declare Function lcUninitialize Lib "Litecad.dll" (ByVal bSaveConfig As Long) As Long
Public Declare Function lcAddFontRes Lib "Litecad.dll" (ByVal hModule As Long, ByVal idResource As Long, ByVal szFontName As String) As Long
Public Declare Function lcAddFontFile Lib "Litecad.dll" (ByVal szFilename As String, ByVal szFontName As String) As Long
Public Declare Function lcAddFontBin Lib "Litecad.dll" (ByVal hData As Long, ByVal szFontName As String) As Long
Public Declare Function lcStrAdd Lib "Litecad.dll" (ByVal szTag As String, ByVal szText As String) As Long
Public Declare Function lcStrSet Lib "Litecad.dll" (ByVal szTag As String, ByVal szText As String) As Long
Public Declare Function lcStrGet Lib "Litecad.dll" (ByVal szTag As String) As String
Public Declare Function lcStrFileLoad Lib "Litecad.dll" (ByVal szFileName As String) As Long
Public Declare Function lcStrFileSave Lib "Litecad.dll" (ByVal szFileName As String, ByVal szLanguage As String, ByVal bInit As Long) As Long
Public Declare Function lcPropGetBool Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long) As Long
Public Declare Function lcPropGetInt Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long) As Long
Public Declare Function lcPropGetFloat Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long) As Double
Public Declare Function lcPropGetStr Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long) As String
Public Declare Function lcPropGetStrA Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long, ByVal szBuf As Any, ByVal BufSize As Long) As Long
Public Declare Function lcPropGetHandle Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long) As Long
Public Declare Function lcPropPutBool Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long, ByVal bValue As Long) As Long
Public Declare Function lcPropPutInt Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long, ByVal Value As Long) As Long
Public Declare Function lcPropPutFloat Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long, ByVal Value As Double) As Long
Public Declare Function lcPropPutStr Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long, ByVal szValue As String) As Long
Public Declare Function lcPropPutHandle Lib "Litecad.dll" (ByVal hObject As Long, ByVal idProp As Long, ByVal hValue As Long) As Long
Public Declare Function lcCreateDrawing Lib "Litecad.dll" () As Long
Public Declare Function lcDeleteDrawing Lib "Litecad.dll" (ByVal hDrw As Long) As Long
Public Declare Function lcDrwNew Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szFileName As String, ByVal hLcWnd As Long) As Long
Public Declare Function lcDrwNewT Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szFileName As String, ByVal szTemplate As String, ByVal hLcWnd As Long) As Long
Public Declare Function lcDrwLoad Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szFileName As String, ByVal hWnd As Long, ByVal hLcWnd As Long) As Long
Public Declare Function lcDrwLoadMem Lib "Litecad.dll" (ByVal hDrw As Long, ByVal hMem As Long, ByVal hLcWnd As Long) As Long
Public Declare Function lcDrwInsert Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szFileName As String, ByVal Overwrite As Long, ByVal hWnd As Long) As Long
Public Declare Function lcDrwSave Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szFileName As String, ByVal bBak As Long, ByVal hWnd As Long) As Long
Public Declare Function lcDrwSaveMem Lib "Litecad.dll" (ByVal hDrw As Long, ByVal hMem As Long, ByVal MemSize As Long) As Long
Public Declare Function lcDrwSaveExploded Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szFileName As String, ByVal bBak As Long, ByVal hWnd As Long) As Long
Public Declare Function lcDrwPurge Lib "Litecad.dll" (ByVal hDrw As Long) As Long
Public Declare Function lcDrwRegenViews Lib "Litecad.dll" (ByVal hDrw As Long, ByVal hEnt As Long) As Long
Public Declare Function lcDrwSortObjects Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long) As Long
Public Declare Function lcDrwClearXData Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long, ByVal Mode As Long) As Long
Public Declare Function lcDrwResolveBlocks Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szError As Any) As Long
Public Declare Function lcDrwAddLayer Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szColor As String, ByVal hLtype As Long, ByVal Lweight As Long) As Long
Public Declare Function lcDrwAddLinetype Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szDefinition As String) As Long
Public Declare Function lcDrwAddLinetypeF Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szFileName As String, ByVal szLtypeName As String) As Long
Public Declare Function lcDrwAddTextStyle Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szFontName As String) As Long
Public Declare Function lcDrwAddDimStyle Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String) As Long
Public Declare Function lcDrwAddMlineStyle Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String) As Long
Public Declare Function lcDrwAddImage Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szFileName As String) As Long
Public Declare Function lcDrwAddImage2 Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal Width As Long, ByVal Height As Long, ByVal nBits As Long) As Long
Public Declare Function lcDrwAddBlock Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcDrwAddBlockFromFile Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szFileName As String, ByVal Overwrite As Long, ByVal hwParent As Long) As Long
Public Declare Function lcDrwAddBlockFromDrw Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal hDrw2 As Long, ByVal Overwrite As Long, ByVal hwParent As Long) As Long
Public Declare Function lcDrwAddBlockFile Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal szFileName As String, ByVal Overwrite As Long, ByVal hwParent As Long) As Long
Public Declare Function lcDrwAddViewPaper Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szName As String, ByVal PaperSize As Long, ByVal Orient As Long, ByVal Width As Double, ByVal Height As Double) As Long
Public Declare Function lcDrwDeleteObject Lib "Litecad.dll" (ByVal hDrw As Long, ByVal hObject As Long) As Long
Public Declare Function lcDrwGetFirstObject Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long) As Long
Public Declare Function lcDrwGetNextObject Lib "Litecad.dll" (ByVal hDrw As Long, ByVal hObject As Long) As Long
Public Declare Function lcDrwGetObjectByID Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long, ByVal Id As Long) As Long
Public Declare Function lcDrwGetObjectByIDH Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long, ByVal szId As String) As Long
Public Declare Function lcDrwGetObjectByName Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long, ByVal szName As String) As Long
Public Declare Function lcDrwCountObjects Lib "Litecad.dll" (ByVal hDrw As Long, ByVal ObjType As Long) As Long
Public Declare Function lcDrwGetViewByBlock Lib "Litecad.dll" (ByVal hDrw As Long, ByVal hBlock As Long) As Long
Public Declare Function lcDrwGetEntByID Lib "Litecad.dll" (ByVal hDrw As Long, ByVal Id As Long) As Long
Public Declare Function lcDrwGetEntByIDH Lib "Litecad.dll" (ByVal hDrw As Long, ByVal szId As String) As Long
Public Declare Function lcDrwGetEntByKey Lib "Litecad.dll" (ByVal hDrw As Long, ByVal Key As Long) As Long
Public Declare Function lcViewSetRect Lib "Litecad.dll" (ByVal hView As Long, ByVal Xcen As Double, ByVal Ycen As Double, ByVal Width As Double, ByVal Height As Double) As Long
Public Declare Function lcViewSetRect2 Lib "Litecad.dll" (ByVal hView As Long, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double) As Long
Public Declare Function lcViewSetLimits Lib "Litecad.dll" (ByVal hView As Long, ByVal Xmin As Double, ByVal Ymin As Double, ByVal Xmax As Double, ByVal Ymax As Double) As Long
Public Declare Function lcViewSetGrid Lib "Litecad.dll" (ByVal hView As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal dX As Double, ByVal dY As Double) As Long
Public Declare Function lcViewRegen Lib "Litecad.dll" (ByVal hView As Long, ByVal hEnt As Long) As Long
Public Declare Function lcViewSetPaperSize Lib "Litecad.dll" (ByVal hView As Long, ByVal PaperSize As Long, ByVal Orient As Long, ByVal Width As Double, ByVal Height As Double) As Long
Public Declare Function lcViewGetEntByPoint Lib "Litecad.dll" (ByVal hView As Long, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double, ByVal Mode As Long) As Long
Public Declare Function lcViewGetEntsByRect Lib "Litecad.dll" (ByVal hView As Long, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal bCross As Long, ByVal MaxNum As Long) As Long
Public Declare Function lcViewGetEntity Lib "Litecad.dll" (ByVal iEnt As Long) As Long
Public Declare Function lcViewRasterize Lib "Litecad.dll" (ByVal hView As Long, ByVal szFileName As String, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal Scal As Double) As Long
Public Declare Function lcViewRasterizeMem Lib "Litecad.dll" (ByVal hView As Long, ByVal hMem As Long, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal Scal As Double) As Long
Public Declare Function lcViewDrawMarker Lib "Litecad.dll" (ByVal hView As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcViewDrawLine Lib "Litecad.dll" (ByVal hView As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Long
Public Declare Function lcViewDrawXline Lib "Litecad.dll" (ByVal hView As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal bRay As Long) As Long
Public Declare Function lcViewDrawRect Lib "Litecad.dll" (ByVal hView As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Long
Public Declare Function lcViewPrint Lib "Litecad.dll" (ByVal hView As Long, ByVal hPrintDC As Long, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal Scal As Double, ByVal PapLef As Double, ByVal PapTop As Double) As Long
Public Declare Function lcMLStyleAddLine Lib "Litecad.dll" (ByVal hStyle As Long, ByVal Offset As Double, ByVal szColor As String, ByVal hLtype As Long) As Long
Public Declare Function lcMLStyleDelLine Lib "Litecad.dll" (ByVal hStyle As Long, ByVal iLine As Long) As Long
Public Declare Function lcMLStyleSortLines Lib "Litecad.dll" (ByVal hStyle As Long) As Long
Public Declare Function lcImageSetPixelRGB Lib "Litecad.dll" (ByVal hImage As Long, ByVal X As Long, ByVal Y As Long, ByVal Red As Long, ByVal Green As Long, ByVal Blue As Long) As Long
Public Declare Function lcImageSetPixelI Lib "Litecad.dll" (ByVal hImage As Long, ByVal X As Long, ByVal Y As Long, ByVal iColor As Long) As Long
Public Declare Function lcImageGetPixelRGB Lib "Litecad.dll" (ByVal hImage As Long, ByVal X As Long, ByVal Y As Long, ByVal pRed As Long, ByVal pGreen As Long, ByVal pBlue As Long) As Long
Public Declare Function lcImageGetPixelI Lib "Litecad.dll" (ByVal hImage As Long, ByVal X As Long, ByVal Y As Long, ByVal piColor As Long) As Long
Public Declare Function lcImageSetPalColor Lib "Litecad.dll" (ByVal hImage As Long, ByVal iColor As Long, ByVal Red As Long, ByVal Green As Long, ByVal Blue As Long) As Long
Public Declare Function lcImageGetPalColor Lib "Litecad.dll" (ByVal hImage As Long, ByVal iColor As Long, ByVal pRed As Long, ByVal pGreen As Long, ByVal pBlue As Long) As Long
